# Anilibria-Api-Client

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt
anilibria_api_client/: __init__.py  api_client.py  exceptions.py  helper.py  models.py
anilibria_api_client/base_api/: api_class.py
anilibria_api_client/methods/: _helper.py  accounts.py  anime.py
anilibria_client/: __init__.py  api_class.py  api_client.py  exceptions.py  helper.py  models.py  types.py
anilibria_client/base_api/: api_class.py
anilibria_client/methods/: __init__.py  _helper.py  _libria.py  accounts.py  ads.py  anime.py  app.py  media.py
docs/: Makefile  README.md  api_client.rst  conf.py  exceptions.rst  helper.rst  index.rst  methods.rst  models.rst  pages.rst  requirements.txt  types.rst
docs/_static/: custom.css
src/anilibria_api_client/: types.py
src/anilibria_api_client/base_api/: api_class.py
tests/: README.md  accounts_tests.py  ads_tests.py  anime_tests.py  app_tests.py  auth_test.py  cli_search_anime.py  execute_tests.py  media_tests.py  methods_tests.py  mt.py  teams_tests.py  test.py
