[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anilibria-api-client"
version = "0.1.5"
description = "Python async API wrapper for AniLibria Swagger"
authors = [
    {name = "semen-bol", email = "syoma.bolotov@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.15",
    "aiofiles==24.1.0",
    "pydantic==2.11.7",
    "m3u8-To-MP4==0.1.11",
    "ffmpeg-python==0.2.0"
]

[project.urls]
Homepage = "https://github.com/semen-bol/Anilibria-Api-Client"
Issues = "https://github.com/semen-bol/Anilibria-Api-Client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["anilibria_api_client*"]
exclude = ["tests*", "dist*", "build*"] 

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
]